build_debug_utf8.log
cargo :    Compiling glassbox v0.1.0 
(D:\AI and  datascience 
projects\Project 8\glassbox)
At line:1 char:1
+ cargo build --target 
wasm32-unknown-unknown 2>&1 | 
Out-File -Encoding ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~
    + CategoryInfo          : NotSpec 
   ified: (   Compiling gl...ect 8\g  
  lassbox):String) [], RemoteExcept   
 ion
    + FullyQualifiedErrorId : NativeC 
   ommandError
 
error[E0428]: the name `components` 
is defined multiple times
  --> src\main.rs:26:1
   |
18 | mod components;
   | --------------- previous 
definition of the module `components` 
here
...
26 | mod components;
   | ^^^^^^^^^^^^^^^ `components` 
redefined here
   |
   = note: `components` must be 
defined only once in the type 
namespace of this module

warning: unused import: `Script`
 --> src\pages\home.rs:2:31
  |
2 | use leptos_meta::{Stylesheet, 
Script};
  |                               
^^^^^^
  |
  = note: `#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) on by 
default

warning: unused import: `Surreal`
 --> src\model\users.rs:2:27
  |
2 | use surrealdb::{Response, 
Surreal};
  |                           ^^^^^^^

warning: unused import: 
`surrealdb::engine::local::Db`
 --> src\model\users.rs:6:5
  |
6 | use surrealdb::engine::local::Db;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0560]: struct `video::Video` 
has no field named `view_count`
  --> src\API\youtube.rs:92:9
   |
92 |         view_count: 
data.views.unwrap_or(0),
   |         ^^^^^^^^^^ 
`video::Video` does not have this 
field
   |
   = note: available fields are: 
`rating`, `genres`

error[E0560]: struct `video::Video` 
has no field named `category`
  --> src\API\youtube.rs:93:9
   |
93 |         category: 
"Unknown".to_string(),
   |         ^^^^^^^^ `video::Video` 
does not have this field
   |
   = note: available fields are: 
`rating`, `genres`

error[E0560]: struct `video::Video` 
has no field named `tags`
  --> src\API\youtube.rs:94:9
   |
94 |         tags: 
data.tags.unwrap_or_default(),
   |         ^^^^ `video::Video` does 
not have this field
   |
   = note: available fields are: 
`rating`, `genres`

error[E0308]: mismatched types
  --> src\components\search.rs:28:33
   |
28 |             match 
search_videos(q).await {
   |                   ------------- 
^ expected `&str`, found `String`
   |                   |
   |                   arguments to 
this function are incorrect
   |
note: function defined here
  --> src\API\search.rs:40:14
   |
40 | pub async fn 
search_videos(query: &str) -> 
Result<Vec<Video>, String> {
   |              ^^^^^^^^^^^^^ 
-----------
help: consider borrowing here
   |
28 |             match 
search_videos(&q).await {
   |                                 +

error[E0308]: mismatched types
  --> src\API\youtube.rs:96:19
   |
96 |         saved_at: 
chrono::Utc::now().to_rfc3339(),
   |                   
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
expected `DateTime<Utc>`, found 
`String`
   |
   = note: expected struct 
`chrono::DateTime<Utc>`
              found struct 
`std::string::String`
help: try removing the method call
   |
96 -         saved_at: 
chrono::Utc::now().to_rfc3339(),
96 +         saved_at: 
chrono::Utc::now(),
   |

Some errors have detailed 
explanations: E0308, E0428, E0560.
For more information about an error, 
try `rustc --explain E0308`.
warning: `glassbox` (bin "glassbox") 
generated 3 warnings
error: could not compile `glassbox` 
(bin "glassbox") due to 7 previous 
errors; 3 warnings emitted
